--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -6,13 +6,11 @@
     {{error_msg}} 
 
     <form action="/login" method="post">
-        <label for="fname">email:</label>
-        <input type="text" id="email" name="email"><br><br>
+        <input class="input is-medium" type="text" id="email" name="email" placeholder="Your email"><br><br>
 
-        <label for="lname">password:</label>
-        <input type="password" id="password" name="password"><br><br>
+        <input class="input is-medium" type="password" id="password" name="password" placeholder="Your Password"><br><br>
 
-        <input type="submit" value="Register">
+        <input class="button is-block is-info is-medium is-fullwidth" type="submit" value="Login">
       </form>
       
 
