implemented item creation;implemented item listing

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,6 +28,12 @@
                             <a href="/register" class="navbar-item">
                                 Sign Up
                             </a>
+                            <a href="/marketplace" class="navbar-item">
+                                Marketplace
+                            </a>
+                            <a href="/create_item" class="navbar-item">
+                                Create
+                            </a>
                         </div>
                     </div>
                 </div>
