--- a/app/templates/marketplace.html
+++ b/app/templates/marketplace.html
@@ -13,7 +13,7 @@
                 <li class="list-group-item catalog-list">
                     <table class="table-responsive">
                         <tr>
-                            <a href="/products/{{element}}">{{element}}</a>
+                            <a href="/marketplace/{{element.name}}">{{element.name}}</a>
                         </tr>
                     </table>
                 </li>
