Sanitization seems to not be an issue. Closing for now. Closes #10. Updated profile view

--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -3,6 +3,6 @@
 {% block title %} Account Info {% endblock %}
 
 {% block content %} 
-    Welcome back!
+    Welcome back {{username}}!<br>
     Account info here.
 {% endblock %}
