added buy option and routing to PIS

--- a/HamstringRestrainingApp/webapp/templates/edit_item.html
+++ b/HamstringRestrainingApp/webapp/templates/edit_item.html
@@ -4,7 +4,7 @@
 
 {% block content %} 
   <div class="column is-4 is-offset-4">
-  <h3 class="title">Edit Item: {{item.name}}</h3>
+  <h3 class="title">Buy Item: {{item.name}}</h3>
     <div class="box">
       {% if msg %}
         {% if msg_type == "warning" %}
