prety much the final version

--- a/HamstringRestrainingApp/webapp/templates/base.html
+++ b/HamstringRestrainingApp/webapp/templates/base.html
@@ -15,6 +15,11 @@
             <nav class="navbar is-danger">
                 <div class="container">
                     <div id="navbarMenuHeroA" class="navbar-menu">
+                        <div class="navbar-start">
+                            <a href="/" class="navbar-brand">
+                                Merchant
+                            </a>
+                        </div>
                         <div class="navbar-end">
                             <a href="/" class="navbar-item">
                                 Home
@@ -27,6 +32,10 @@
 
                             <a href="/logout" class="navbar-item">
                                 Logout
+                            </a>
+
+                            <a href="/transactions" class="navbar-item">
+                                Transactions
                             </a>
 
                             {% else %}
@@ -49,6 +58,7 @@
                             <a href="/marketplace" class="navbar-item">
                                 Marketplace
                             </a>
+                            
                         </div>
                     </div>
                 </div>
