--- a/HamstringRestrainingApp/webapp/templates/marketplace.html
+++ b/HamstringRestrainingApp/webapp/templates/marketplace.html
@@ -2,24 +2,41 @@
 
 {% block title %} Marketplace {% endblock %}
 
-{% block content %} 
-    {{error_msg}} 
-      
-<table class="table table-striped">
-    <tr>
-        <td class="table-catalog">
-            <ul class="list-group">
-            {% for element in catalog %}
-                <li class="list-group-item catalog-list">
-                    <table class="table-responsive">
-                        <tr>
-                            <a href="/marketplace/{{element.id}}">{{element.name}}</a>
-                        </tr>
-                    </table>
-                </li>
-            {% endfor %}
-            </ul>
-        </td>
-    </tr>
+{% block content %}
+{{error_msg}}
+
+{% if role == "anonymous" %}
+
+<div id="messages" class="notification is-warning"> You are viewing the marketplace in anonymous mode, sign in if you have an account</div>
+
+{% endif %}
+
+<style>
+    table.center {
+        margin-left: auto;
+        margin-right: auto;
+    }
+</style>
+<table class="table center is-striped">
+    <thead>
+        <tr></tr>
+        <th>item name</th>
+        <th>price</th>
+        <th>currency</th>
+        <th>payer email</th>
+        <th></th>
+        </tr>
+    </thead>
+
+    <tbody>
+        {% for element in catalog %}
+        <tr>
+            <th>{{element.name}}</th>
+            <th>{{element.price}}</th>
+            <th>dollars</th>
+            <td><a href="/marketplace/{{element.id}}"><button class="button is-danger is-outlined">View Item</button></a>
+        </tr>
+        {% endfor %}
+    </tbody>
 </table>
 {% endblock %}
